# zynthbox-module-norns

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  org.kde.norns-qml-shield.desktop
app/qml/: main.qml
cmake/: FindXdo.cmake
src/: CMakeLists.txt  main.cpp  process.h  qmldir  qmlplugin.cpp  resources.qrc  xdowrapper.cpp  xdowrapper.h  xsendkey.cpp  xsendkey.h
src/icons/: CMakeLists.txt
src/qml/: PushSlideControl.qml  Shield.qml  main.qml
src/qml/layouts/: LayoutBase.qml  Norns.qml  ZynthBoxCentered.qml  ZynthBoxLarge.qml
